fix: setup page layout issue

--- a/src/modules/setup/components/RegionSelection/RegionSelection.scss
+++ b/src/modules/setup/components/RegionSelection/RegionSelection.scss
@@ -1,13 +1,14 @@
 .region-selection {
   display: grid;
-  grid-template-rows: minmax(0, 1fr) auto;
+  grid-template-rows: minmax(0, calc(100vh - 176px)) auto;
   gap: 16px;
   height: 100%;
   padding-bottom: 16px;
 }
 
 .region-selection-footer {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 16px;
 
   & > * {
